# goit-pythonweb-hw-12

./: README.md  env.example  main.py  pyproject.toml  requirements.txt  test.db
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 24226e38fd0a_added_user_model.py  5d473054063c_init.py  c1c7eebcd108_init.py  c5432c29381d_add_to_model_user_filed_confirmed.py
source/: conf.py  index.rst
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  limiter.py  redis.py  settings.py  users.py
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils_healthchecker.py  test_repository_contacts.py  test_services_auth.py  test_services_contacts.py  test_services_email.py  test_services_user.py
