[project]
name = "goit-pythonweb-hw-08"
version = "0.1.0"
description = "Alina"
authors = [
    {name = "AlinaRyabova",email = "115992255+AlinaRyabova@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
