[project]
name = "goit-pythonweb-hw-12"
version = "0.1.0"
description = "Alina"
authors = [
    {name = "AlinaRyabova",email = "115992255+AlinaRyabova@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.0.2"